[package]
name = "mirrorfour-api"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.10.2"
anyhow = "1.0.97"
base64 = "0.22.1"
bitflags = "2.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = { version = "0.10.1", features = ["serde"] }
futures = "0.3.31"
rand = "0.9.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.0", features = ["vendored", "actix-web"] }
utoipa-swagger-ui-vendored = "0.1.2"
